--- a/force-app/main/default/classes/VDT_TerritoryAnalysisBuilder.cls
+++ b/force-app/main/default/classes/VDT_TerritoryAnalysisBuilder.cls
@@ -10,15 +10,27 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
     private String dataCalculationId;
     private Set<String> accountIds = new Set<String>();
     private List<Account> records = new List<Account>();
+    private List<String> territoriesInCalculation = new List<String>();
     private TerritoryAnalysisOutput territoryAnalysisData = new TerritoryAnalysisOutput();
     private final String EMPTY_PLACEHOLDER = '<<EMPTY>>';
     private final String DELIMITER_CHAR = '_';
     private Map<String, Integer> associationsByParentAccount = new Map<String, Integer>();
 
+    public VDT_TerritoryAnalysisBuilder() {
+
+    }
+
     public VDT_TerritoryAnalysisBuilder(String countryField, String specialtyField, String dataCalculationId) {
         this.countryField = countryField;
         this.specialtyField = specialtyField;
         this.dataCalculationId = dataCalculationId;
+    }
+
+    public VDT_TerritoryAnalysisBuilder withTerritories(String territoryCalculation) {
+        if (String.isNotBlank(territoryCalculation) && territoryCalculation != 'All') {
+            this.territoriesInCalculation = new VDT_Territory2Selector().getAllTerritoryIdsInHierarchy(new List<String>{territoryCalculation});
+        }        
+        return this;
     }
 
     /**
@@ -88,7 +100,9 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
                 associationsByParentAccount.put(accountTerritory.Territory2Id, 1);
             }
         }
-        upsert transactionResultsByTerritory.values();
+        if (!transactionResultsByTerritory.isEmpty()) {
+            upsert transactionResultsByTerritory.values();
+        }
         return this;
     }
 
@@ -98,7 +112,14 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
      * @return  `List<ObjectTerritory2Association>`
      */
     private List<ObjectTerritory2Association> getTerritoryAssignmentForAccounts(Set<String> accountIds) {
-        return [SELECT Id, Territory2Id, Territory2.Name, ObjectId, Territory2.ParentTerritory2Id FROM ObjectTerritory2Association WHERE ObjectId IN :accountIds];
+        if (this.territoriesInCalculation.isEmpty()) {
+            return [SELECT Id, Territory2Id, Territory2.Name, ObjectId, Territory2.ParentTerritory2Id FROM ObjectTerritory2Association WHERE ObjectId IN :accountIds];
+        } else {
+            return [SELECT Id, Territory2Id, Territory2.Name, ObjectId, Territory2.ParentTerritory2Id 
+                        FROM ObjectTerritory2Association 
+                        WHERE ObjectId IN :accountIds AND Territory2Id IN :this.territoriesInCalculation];
+        }
+        
     }
 
     private Set<String> getTerritoryIdsFromCurrentAssociations(List<ObjectTerritory2Association> associations) {
@@ -111,24 +132,26 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
 
     private Map<String, VDT_Transaction_Result__c> getTransactionResultsByTerritory(Set<String> territoryIds) {
         Map<String, VDT_Transaction_Result__c> transactionResultsByKey = new Map<String, VDT_Transaction_Result__c>();
-        List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Transaction_Result__c', VDT_TransactionResultService.TERRITORY_ANALYSIS_RECORD_TYPE_DEV);
-        List<VDT_Transaction_Result__c> transactions = new VDT_TransactionResultSelector()
-            .withAdditionalFields(new List<String> {
-                'Territory_Id__c',
-                'Country__c',
-                'Specialty__c',
-                'Account_Type__c',
-                'Total_Accounts__c'
-            })
-            .addWhereClauses(new List<String> {
-                'RecordTypeId = \'' + recordTypes.get(0).Id + '\'',
-                'Data_Calculation__c = \'' + this.dataCalculationId + '\'',
-                'Territory_Id__c IN (' + String.join(new List<String>(territoryIds), ',') + ')'
-            })
-            .query();
-        for (VDT_Transaction_Result__c territoryTransaction : transactions) {
-            String key = territoryTransaction.Territory_Id__c + DELIMITER_CHAR + territoryTransaction.Country__c + DELIMITER_CHAR + territoryTransaction.Specialty__c + DELIMITER_CHAR + territoryTransaction.Account_Type__c;
-            transactionResultsByKey.put(key, territoryTransaction);
+        if (!territoryIds.isEmpty()) {
+            List<RecordType> recordTypes = VDT_RecordTypeService.getRecordTypeByObjectAndName('VDT_Transaction_Result__c', VDT_TransactionResultService.TERRITORY_ANALYSIS_RECORD_TYPE_DEV);
+            List<VDT_Transaction_Result__c> transactions = new VDT_TransactionResultSelector()
+                .withAdditionalFields(new List<String> {
+                    'Territory_Id__c',
+                    'Country__c',
+                    'Specialty__c',
+                    'Account_Type__c',
+                    'Total_Accounts__c'
+                })
+                .addWhereClauses(new List<String> {
+                    'RecordTypeId = \'' + recordTypes.get(0).Id + '\'',
+                    'Data_Calculation__c = \'' + this.dataCalculationId + '\'',
+                    'Territory_Id__c IN (' + String.join(new List<String>(territoryIds), ',') + ')'
+                })
+                .query();
+            for (VDT_Transaction_Result__c territoryTransaction : transactions) {
+                String key = territoryTransaction.Territory_Id__c + DELIMITER_CHAR + territoryTransaction.Country__c + DELIMITER_CHAR + territoryTransaction.Specialty__c + DELIMITER_CHAR + territoryTransaction.Account_Type__c;
+                transactionResultsByKey.put(key, territoryTransaction);
+            }
         }
         return transactionResultsByKey;
     }
@@ -147,9 +170,9 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
         return value;
     }
 
-    private List<TerritoryItem> getTerritoryHierarchy() {        
+    public List<TerritoryItem> getTerritoryHierarchy() {        
         Map<String, List<Territory2>> territoriesByParent = new Map<String, List<Territory2>>();
-        for (Territory2 territory : [SELECT Id, Name, ParentTerritory2Id FROM Territory2]) {
+        for (Territory2 territory : [SELECT Id, Name, ParentTerritory2Id, DeveloperName FROM Territory2]) {
             String parentId = String.isBlank(territory.ParentTerritory2Id) ? 'NULL' : territory.ParentTerritory2Id;
             if (territoriesByParent.containsKey(parentId)) {
                 territoriesByParent.get(parentId).add(territory);
@@ -164,7 +187,7 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
     private List<TerritoryItem> addChildrenTerritories(List<Territory2> parentTerritories, Map<String, List<Territory2>> territoriesByParent) {
         List<TerritoryItem> parentItems = new List<TerritoryItem>();
         for (Territory2 parentTerritory : parentTerritories) {
-            TerritoryItem territoryItem = new TerritoryItem(parentTerritory.Id, parentTerritory.Name, this.associationsByParentAccount.get(parentTerritory.Id));
+            TerritoryItem territoryItem = new TerritoryItem(parentTerritory.Id, parentTerritory.Name, parentTerritory.DeveloperName, this.associationsByParentAccount.get(parentTerritory.Id));
             if (territoriesByParent.containsKey(parentTerritory.Id)) {
                 territoryItem.items = addChildrenTerritories(territoriesByParent.get(parentTerritory.Id), territoriesByParent);
             }
@@ -181,17 +204,23 @@ public with sharing class VDT_TerritoryAnalysisBuilder {
 
     public class TerritoryItem {
 
+        @AuraEnabled
         public String id;
+        @AuraEnabled
         public String label;
+        @AuraEnabled
         public String name;
+        @AuraEnabled
         public Boolean expanded = false;
+        @AuraEnabled
         public Integer totalAccounts = 0;
+        @AuraEnabled
         public List<TerritoryItem> items;
 
-        public TerritoryItem(String id, String label, Integer totalAccounts) {
+        public TerritoryItem(String id, String label, String name, Integer totalAccounts) {
             this.id = id;
             this.label = label;
-            this.name = label;
+            this.name = name;
             if (totalAccounts != null) {
                 this.totalAccounts = totalAccounts;
             }
