--- a/force-app/main/default/classes/VDT_TransactionResultService.cls
+++ b/force-app/main/default/classes/VDT_TransactionResultService.cls
@@ -216,6 +216,10 @@ public inherited sharing class VDT_TransactionResultService {
         public List<String> getCountries() {
             return this.countries;
         }
+
+        public String getCalculationRecordId() {
+            return this.calculationRecordId;
+        }
     }
 
     public class TerritoryItem {
